trunk/Archive2/0c/4cef51e95d001f/output
main.cpp: In function 'int main()':
main.cpp:3:18: error: invalid declaration of member template in local class
     struct foo { template<typename T> void lol(T) {} };
                  ^
