trunk/Archive2/0c/4cef51e95d001f/main.cpp
int main()
{
    struct foo { template<typename T> void lol(T) {} };
}